[package]
name = "ghostcrypt-crypto"
version = "0.1.0"
edition = "2021"
description = "GhostCrypt cryptographic core — Signal Protocol, Double Ratchet, X3DH"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib", "staticlib"]

[features]
default = []
post-quantum = ["ml-kem"]

[dependencies]
x25519-dalek = { version = "2", features = ["static_secrets"] }
ed25519-dalek = { version = "2", features = ["rand_core"] }
aes-gcm = "0.10"
hkdf = "0.12"
sha2 = "0.10"
hmac = "0.12"
rand = "0.8"
rand_core = "0.6"
zeroize = { version = "1", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
base64 = "0.22"
flutter_rust_bridge = "=2.9.0"
openmls = { version = "0.8", default-features = false, features = ["openmls_rust_crypto"] }
openmls_rust_crypto = "0.5"
openmls_basic_credential = "0.5"
openmls_traits = "0.5"
ml-kem = { version = "0.2", optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
getrandom = { version = "0.2", features = ["js"] }
openmls = { version = "0.8", default-features = false, features = ["openmls_rust_crypto", "js"] }

[dev-dependencies]
proptest = "1"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "crypto_bench"
harness = false

[profile.release]
opt-level = "z"
lto = true
